--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,5 +1,17 @@
 <!--base code from: https://github.com/treehouse/android-navigation-drawer-final/blob/master/app/src/main/res/layout/activity_main.xml-->
-
+<!--xsl:if
+    xmlns:screenOrientation=""
+    xmlns:xsl="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    ...some output if the expression is true...
+</xsl:if
+    test="expression"
+    xmlns:xsl="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"-->
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,10 +25,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/naturephotographynowwebsitepage2"
-        xmlns:xsl="http://schemas.android.com/apk/res-auto"
+        android:background="@drawable/naturephotographynowwebsitepage"
         tools:context=".MainActivity">
-
         <!--android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingLeft="@dimen/activity_horizontal_margin"
