--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,8 +36,8 @@
             android:layout_centerHorizontal="true" />
 
         <WebView
-            android:layout_width="96dp"
-            android:layout_height="510dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/webView3"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
