--- a/app/src/main/res/layout/activity_horiz_gallery.xml
+++ b/app/src/main/res/layout/activity_horiz_gallery.xml
@@ -4,12 +4,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.jeremy.naturephotographynow.activity.GalleryActivity"
-    android:configChanges="keyboardHidden|orientation|screenSize">
+    tools:context="com.example.jeremy.naturephotographynow.activity.HorizGalleryActivity">
 
+    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/list" />
 </RelativeLayout>
