--- a/app/src/main/res/layout-land/activity_gallery.xml
+++ b/app/src/main/res/layout-land/activity_gallery.xml
@@ -8,8 +8,11 @@
     android:configChanges="keyboardHidden|orientation|screenSize">
 
 
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/list" />
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/list"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
