--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -4,13 +4,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.jeremy.naturephotographynow.activity.HorizGalleryActivity">
+    tools:context="com.example.jeremy.naturephotographynow.activity.GalleryActivity"
+    android:configChanges="keyboardHidden|orientation|screenSize">
 
 
-    <Gallery
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/list"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
