--- a/app/src/main/res/layout/activity_individual_picture.xml
+++ b/app/src/main/res/layout/activity_individual_picture.xml
@@ -6,7 +6,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.jeremy.naturephotographynow.activity.IndividualPicture">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <WebView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/webView2"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
