--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,6 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/naturephotographynowwebsitepage2"
         xmlns:xsl="http://schemas.android.com/apk/res-auto"
         tools:context=".MainActivity">
 
@@ -40,10 +39,10 @@
             android:layout_height="match_parent"
             android:id="@+id/webView3"
             android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
         <!--android:src="@drawable/batdroid"-->
 
